# it2

./: IMPLEMENTATION.md  Makefile  README.md  pyproject.toml  renovate.json
.claude/commands/: bump.md
.github/workflows/: ci.yml
scripts/: e2e-test.sh
src/it2/: __init__.py
src/it2/commands/: app.py  config_commands.py  monitor.py  profile.py  session.py  shortcuts.py  tab.py  window.py
src/it2/core/: connection.py  session_handler.py
src/it2/utils/: config.py
tests/: E2E.md  test_app_commands.py  test_cli.py  test_config.py  test_monitor_commands.py  test_profile_commands.py  test_session_commands.py  test_session_commands.py.bak  test_session_handler.py  test_shortcuts.py  test_tab_commands.py  test_window_commands.py
